--- a/CaseManagement/CaseManagement.csproj
+++ b/CaseManagement/CaseManagement.csproj
@@ -26,16 +26,22 @@
     <Compile Remove="Data\Migrations\20200504155409_asfkljasffklas.Designer.cs" />
     <Compile Remove="Data\Migrations\20200505075043_jakfs.cs" />
     <Compile Remove="Data\Migrations\20200505075043_jakfs.Designer.cs" />
+    <Compile Remove="Data\Migrations\20200603155454_ChangeDatabaseEntitiesStructures.cs" />
+    <Compile Remove="Data\Migrations\20200603155454_ChangeDatabaseEntitiesStructures.Designer.cs" />
+    <Compile Remove="Data\Migrations\20200604092133_uha.cs" />
+    <Compile Remove="Data\Migrations\20200604092133_uha.Designer.cs" />
+    <Compile Remove="Data\Migrations\20200612053821_MakeSomeCaseAndTaskFieldsNullable.cs" />
+    <Compile Remove="Data\Migrations\20200612053821_MakeSomeCaseAndTaskFieldsNullable.Designer.cs" />
   </ItemGroup>
 
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.4" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
